--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,18 @@
 name: zepar
 description: A wrapper for http and html packages
-version: 1.0.0
+version: 1.1.0
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
-  flutter: '>=3.3.9'
+  sdk: '>=3.0.0'
+  flutter: '>=3.10.1'
 
 dependencies:
-  html: ^0.15.1
-  http: ^0.13.5
+  html: ^0.15.3
+  http: ^0.13.6
   flutter:
     sdk: flutter
 
 dev_dependencies:
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
