--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,19 @@
 name: zepar
 description: A wrapper for http and html packages
-version: 1.1.1
+repository: https://github.com/wsei-dziekanat/zepar
+version: 1.2.0
 
 environment:
-  sdk: '>=3.0.0'
-  flutter: '>=3.10.1'
+  sdk: '>=3.3.0 <4.0.0'
+  flutter: '>=3.19.0'
 
 dependencies:
   html: ^0.15.4
-  http: ^1.1.0
+  http: ^1.2.1
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  flutter_lints: ^2.0.3
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
